# tono

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  install.sh  listen.html
.claude/skills/sound-designer/: SKILL.md
.claude/skills/sound-review-loop/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  native.yml  pages.yml  python.yml  release.yml  wheels.yml
crates/tono-core/: Cargo.toml
crates/tono-core/examples/: play_instrument.rs  runtime_mixer.rs
crates/tono-core/src/: adaptive.rs  analysis.rs  catalog.rs  drumkit.rs  dsl.rs  dsp.rs  edit.rs  instrument.rs  lib.rs  patch.rs  player.rs  presets.rs  render.rs  review.rs  runtime.rs  song.rs  stream.rs  streaming.rs  vary.rs  voice.rs
crates/tono-core/src/adaptive/: layers.rs  mod.rs  schedule.rs  sections.rs
crates/tono-core/src/dsl/: mod.rs  node.rs  tests.rs  tracks.rs  validate.rs
crates/tono-core/src/instrument/: design.rs  mod.rs  note.rs  tests.rs
crates/tono-core/src/render/: effects.rs  kit.rs  mod.rs  osc.rs  output.rs  seq.rs  tests.rs  tracks.rs
crates/tono-core/src/runtime/: engine.rs  mixer.rs  mod.rs  ring.rs  source.rs  tests.rs
crates/tono-core/src/song/: compile.rs  mod.rs  phrase.rs
crates/tono-core/src/streaming/: mod.rs  proc.rs  source.rs  tests.rs  value.rs
crates/tono-core/tests/: golden.rs
crates/tono-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/tono-desktop/src/: audio.rs  main.rs  studio.rs
crates/tono-desktop/ui/: index.html
crates/tono-play/: README.md
crates/tono-play/examples/: adaptive.rs  band.rs  buses.rs  drums.rs  interactive_music.rs  live_band.rs  lofi.rs  playground.rs  presets.rs  song.rs  voices.rs
crates/tono-play/src/: lib.rs
crates/tono-py/: Cargo.toml  README.md  pyproject.toml
crates/tono-py/examples/: live_pygame.py  render_numpy.py
crates/tono-py/src/: lib.rs  stream.rs
crates/tono-py/tests/: smoke.py
docs/: README.md  ROADMAP.md  TOOLS.md  cookbook.md  logo-wordmark.json  logo.json  quickstart.md  research-hq-sfx.md  runtime.md
docs/examples/: band-demo.json  blip.json  deep-note.json  evening-glade.json  fire-and-wind.json  hat.json  iron-gauntlet.json  jump-8bit.json  laser-session.json  layered-sfx-scaffold.json  midi_to_seq.py  nokia-tune.json  parametric-impact.patch.json  retro-coin.json  river-flows-in-you.json  river-phonk.json  struck-bell.json  sunny-steps.json  waka.json
docs/playground/: index.html
docs/playground/pkg/: sonarium_wasm.js  sonarium_wasm_bg.wasm  tono_wasm.js  tono_wasm_bg.wasm
examples/: band_demo.jsonl  laser_session.jsonl  midi_to_seq.py  river_flows_in_you.jsonl  river_phonk.jsonl
site/: architecture.html  index.html
sonarium-core/: Cargo.toml
sonarium-core/src/: analysis.rs  dsl.rs  lib.rs  render.rs  stream.rs  voice.rs
sonarium-desktop/: Cargo.toml  tauri.conf.json
sonarium-desktop/capabilities/: default.json
sonarium-desktop/frontend/: index.html
sonarium-desktop/src/: audio.rs  main.rs
sonarium-wasm/: Cargo.toml
sonarium-wasm/src/: lib.rs
src/: analysis.rs  audio.rs  bank.rs  diff.rs  dsl.rs  dsp.rs  edit.rs  engines.rs  imaging.rs  journal.rs  lib.rs  main.rs  midi.rs  play.rs  render.rs  resources.rs  review.rs  server.rs  service.rs  session.rs  target.rs  vary.rs
tests/: pipeline.rs
tono-core/: Cargo.toml
tono-core/examples/: play_instrument.rs
tono-core/src/: analysis.rs  dsl.rs  dsp.rs  instrument.rs  lib.rs  patch.rs  render.rs  review.rs  runtime.rs  song.rs  streaming.rs  vary.rs  voice.rs
tono-desktop/: Cargo.toml  tauri.conf.json
tono-desktop/capabilities/: default.json
tono-desktop/src/: audio.rs  main.rs
tono-desktop/ui/: index.html
tono-play/: Cargo.toml
tono-play/examples/: playground.rs
tono-py/: Cargo.toml  README.md  build.rs  pyproject.toml
tono-py/examples/: blip.py
tono-py/src/: lib.rs
tono-wasm/: Cargo.toml
tono-wasm/src/: lib.rs
