[workspace]
members = ["tono-core", "tono-desktop", "tono-play"]
# tono-desktop (native GUI + real-time audio + MIDI) and tono-play (cpal speaker
# output for the programmatic playground) carry heavy deps, so they stay OUT of
# the default native build/test/clippy and CI. Build them explicitly:
# `make desktop` / `make play`.
default-members = [".", "tono-core"]

[workspace.dependencies.cpal]
version = "0.15.3"

[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marmikshah/tono"

[workspace.dependencies]
tono-core = { path = "tono-core" }
anyhow = "1.0.102"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
base64 = "0.22.1"
flacenc = { version = "0.4", default-features = false }
hound = "3.5.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
midly = "0.5"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
rustfft = "6.4.1"
rustysynth = "1.3.6"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "sync", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vorbis_rs = "0.5.5"

[package]
name = "tono"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An MCP server that turns an AI agent into a sound engineer — instruments, effects, and sequencing driven by tool calls, rendered deterministically to audio."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mcp", "audio", "synthesis", "chiptune", "gamedev"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
tono-core = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
flacenc = { workspace = true }
hound = { workspace = true }
midly = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vorbis_rs = { workspace = true }
