[workspace]
members = ["crates/tono-core", "crates/tono-desktop", "crates/tono-play"]
# tono-desktop (native GUI + real-time audio + MIDI) and tono-play (cpal speaker
# for the programmatic playground) carry heavy / platform deps, so they stay OUT
# of the default native build/test/clippy and CI.
# Build them explicitly: `make desktop` / `make play`.
default-members = [".", "crates/tono-core"]

[workspace.dependencies.cpal]
version = "0.15.3"

[workspace.package]
version = "1.5.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/marmikshah/tono"

[workspace.dependencies]
# The version must match workspace.package.version above: cargo strips `path` at
# publish time and pins the crates.io dependency to this version. Bump both together.
tono-core = { path = "crates/tono-core", version = "1.5.0" }
anyhow = "1.0.102"
base64 = "0.22.1"
flacenc = { version = "0.4", default-features = false }
hound = "3.5.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
midly = "0.5"
rustfft = "6.4.1"
rustysynth = "1.3.6"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
vorbis_rs = "0.5.5"

[package]
name = "tono"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A deterministic sound engine — synthesis, instruments, songs, and adaptive game music, rendered byte-identically to audio. Includes a CLI that renders a SoundDoc to audio + analysis images."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["audio", "synthesis", "dsp", "chiptune", "gamedev"]
categories = ["multimedia::audio", "game-development"]
# The CLI crate ships src + README + LICENSE only. Keep the showcase assets
# (docs/, esp. the ~14 MB of example audio) and dev tooling out of the package —
# they'd blow past crates.io's 10 MiB upload limit and don't belong in the crate.
exclude = [
    "/docs",
    "/.github",
    "/.githooks",
    "/.editorconfig",
    "/CLAUDE.md",
    "/Makefile",
]

[dependencies]
tono-core = { workspace = true }
anyhow = { workspace = true }
flacenc = { workspace = true }
hound = { workspace = true }
midly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vorbis_rs = { workspace = true }
