[workspace]
members = ["crates/tono-core", "crates/tono-desktop", "crates/tono-play", "crates/tono-py"]
# tono-desktop (native GUI + real-time audio + MIDI), tono-play (cpal speaker for
# the programmatic playground) and tono-py (the PyO3 Python extension) carry heavy
# / platform deps, so they stay OUT of the default native build/test/clippy and CI.
# Build them explicitly: `make desktop` / `make play` / `make python`.
default-members = [".", "crates/tono-core"]

[workspace.package]
version = "2.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/marmikshah/tono"

[workspace.dependencies]
# The version must match workspace.package.version above: cargo strips `path` at
# publish time and pins the crates.io dependency to this version. Bump both together.
tono-core = { path = "crates/tono-core", version = "2.0.0" }
anyhow = "1.0.102"
base64 = "0.22.1"
cpal = "0.15.3"
flacenc = { version = "0.4", default-features = false }
hound = "3.5.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
midly = "0.5"
rustfft = "6.4.1"
rustysynth = "1.3.6"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
vorbis_rs = "0.5.5"

[package]
name = "tono"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A deterministic sound engine — synthesis, instruments, songs, and adaptive game music, rendered byte-identically to audio. Includes a CLI that renders a SoundDoc to audio + analysis images."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["audio", "synthesis", "dsp", "chiptune", "gamedev"]
categories = ["multimedia::audio", "game-development"]
# The CLI crate ships src + README + CHANGELOG + LICENSE only. Keep the showcase
# assets (docs/, esp. the ~14 MB of example audio), the Pages site, and dev
# tooling out of the package — they'd blow past crates.io's 10 MiB upload limit
# and don't belong in the crate.
exclude = [
    "/docs",
    "/site",
    "/.github",
    "/.githooks",
    "/.editorconfig",
    "/.gitignore",
    "/CLAUDE.md",
    "/Makefile",
]

[dependencies]
tono-core = { workspace = true }
anyhow = { workspace = true }
flacenc = { workspace = true }
hound = { workspace = true }
midly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vorbis_rs = { workspace = true }
