[package]
name = "sonarium-desktop"
description = "Optional native desktop studio for sonarium — real-time audition (cpal) over the deterministic engine. Built only via `make desktop`; never part of the default build, MCP server, or CI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
sonarium-core = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cpal = "0.15.3"
midir = "0.10"
tauri = "2"

[build-dependencies]
tauri-build = "2"
