[package]
name = "tono-py"
description = "Python bindings for tono — deterministic sound synthesis, rendered or played from Python."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "tono"
crate-type = ["cdylib"]

[dependencies]
tono-core = { workspace = true }
tono-play = { path = "../tono-play" }
serde_json = { workspace = true }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
