[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tono"
description = "Deterministic sound synthesis for Python — render a symbolic synth graph to audio, or play it live."
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["audio", "synthesis", "dsp", "sound", "chiptune"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/marmikshah/tono"

[tool.maturin]
# The crate lives in this directory; the workspace root is one level up.
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
