[package]
name = "tono-wasm"
description = "WebAssembly bindings for the tono audio engine — render a synthesis graph to audio + analysis in the browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tono-core = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.126"
console_error_panic_hook = "0.1.7"
