[package]
name = "tono-core"
description = "The pure, headless audio engine behind tono: synthesis-graph DSL, DSP, deterministic renderer, instruments, songs, and analysis — no I/O, no transport."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# cargo copies the workspace README into the package, so the crates.io page of
# the engine crate isn't blank.
readme = "../../README.md"
keywords = ["audio", "synthesis", "dsp", "chiptune", "gamedev"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
anyhow = { workspace = true }
image = { workspace = true, optional = true }
rustfft = { workspace = true, optional = true }
rustysynth = { workspace = true, optional = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[features]
default = ["analysis", "sampler"]
# Spectral analysis + spectrogram/waveform PNGs (the authoring/critique surface).
analysis = ["dep:rustfft", "dep:image"]
# SoundFont (.sf2) sampler instrument — pulls in rustysynth + file I/O.
sampler = ["dep:rustysynth"]
