[package]
name = "tono-desktop"
description = "Optional native desktop studio for tono — real-time audition (cpal) over the deterministic engine. Built only via `make desktop`; never part of the default build or CI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Explicit features: the studio uses the analysis surface and checks .sf2
# paths, so a change to core's defaults can't silently unbuild this crate.
tono-core = { workspace = true, features = ["analysis", "sampler"] }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tono-play = { path = "../tono-play" }
tauri = "2"

[build-dependencies]
tauri-build = "2"
